--- a/index.html
+++ b/index.html
@@ -60,6 +60,20 @@
     <img src="img/bgphone.jpg" class="product-phone" alt="bg">
   </div>
 
+  <div class="descr" style="background: url('./img/wallpaper_startframe__crc5hsgtpzo2_medium.jpg') center center/cover no-repeat;">
+    <p>
+      A dramatically more powerful camera system. A display so responsive, every interaction feels new again. The world’s fastest smartphone chip. Exceptional durability. And a huge leap in battery life.
+      <br><br>
+      Let’s Pro.
+    </p>
+  </div>
+
+  <div class="phone">
+    <img src="img/design_display_pro__d3dtminb414y_large.png" alt="">
+    <p>iPhone 13 Pro
+      <br> 6.1”</p>
+  </div>
+
   <div class="d-md-flex flex-md-equal w-100">
     <div class="pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden" style="padding: 50px 0 50px 0; background-color: #fff; height: 700px;">
       <!-- <div class="my-3 py-3">
